--- a/src/GuessWordClient.Tests/GuessWordClient.Tests.csproj
+++ b/src/GuessWordClient.Tests/GuessWordClient.Tests.csproj
@@ -9,6 +9,7 @@
     </ItemGroup>
 
     <ItemGroup>
+        <PackageReference Include="JetBrains.Annotations" />
         <PackageReference Include="Microsoft.Extensions.Configuration.UserSecrets"/>
         <PackageReference Include="Microsoft.Extensions.Http"/>
         <PackageReference Include="Microsoft.Extensions.Options.ConfigurationExtensions"/>
