--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -77,6 +77,9 @@ jobs:
         working-directory: ./src
         run: |
           dotnet test --no-build -c Release --logger "console;verbosity=normal" --logger "trx;LogFilePrefix=results" -m
+        env:
+          GuessWordClient__Username: "guesswordclient_github_ci"
+          GuessWordClient__Password: ${{ secrets.GUESS_WORD_PASSWORD }}
       
       - name: Upload test results trx files
         uses: actions/upload-artifact@v4
