--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -79,7 +79,8 @@ jobs:
         timeout-minutes: 10
         working-directory: ./src
         run: |
-          dotnet test --no-build -c Release --logger "console;verbosity=normal" --logger "trx;LogFilePrefix=results" -m
+          dotnet test --no-build --framework net8.0 -c Release --logger "console;verbosity=normal" --logger "trx;LogFilePrefix=results" -m
+          dotnet test --no-build --framework net9.0 -c Release --logger "console;verbosity=normal" --logger "trx;LogFilePrefix=results" -m
         env:
           GuessWordClient__Username: "guesswordclient_github_ci"
           GuessWordClient__Password: ${{ secrets.GUESS_WORD_PASSWORD }}
