--- a/src/Directory.Packages.props
+++ b/src/Directory.Packages.props
@@ -4,28 +4,25 @@
         <CentralPackageTransitivePinningEnabled>false</CentralPackageTransitivePinningEnabled>
     </PropertyGroup>
     <ItemGroup>
-        <PackageVersion Include="coverlet.collector" Version="6.0.2">
+        <PackageVersion Include="coverlet.collector" Version="6.0.4">
             <PrivateAssets>all</PrivateAssets>
             <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
         </PackageVersion>
-        <PackageVersion Include="FluentAssertions" Version="7.0.0"/>
+        <PackageVersion Include="FluentAssertions" Version="8.6.0"/>
         <PackageVersion Include="Flurl" Version="4.0.0"/>
-        <PackageVersion Include="JetBrains.Annotations" Version="2024.3.0"/>
+        <PackageVersion Include="JetBrains.Annotations" Version="2025.2.2"/>
         <PackageVersion Include="Macross.Json.Extensions" Version="3.0.0"/>
-        <PackageVersion Include="Microsoft.Extensions.Configuration.UserSecrets" Version="9.0.0"/>
-        <PackageVersion Include="Microsoft.Extensions.DependencyInjection" Version="9.0.0"/>
-        <PackageVersion Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="9.0.0"/>
-        <PackageVersion Include="Microsoft.Extensions.Http" Version="9.0.0"/>
-        <PackageVersion Include="Microsoft.Extensions.Logging.Abstractions" Version="9.0.0"/>
-        <PackageVersion Include="Microsoft.Extensions.Options.ConfigurationExtensions" Version="9.0.0"/>
-        <PackageVersion Include="Microsoft.NET.Test.Sdk" Version="17.12.0"/>
-        <PackageVersion Include="System.IdentityModel.Tokens.Jwt" Version="8.3.0"/>
-        <PackageVersion Include="xunit" Version="2.9.2"/>
-        <PackageVersion Include="Xunit.DependencyInjection" Version="9.7.1"/>
-        <PackageVersion Include="Xunit.DependencyInjection.Logging" Version="9.0.0"/>
-        <PackageVersion Include="xunit.runner.visualstudio" Version="3.0.0">
-            <PrivateAssets>all</PrivateAssets>
-            <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
-        </PackageVersion>
+        <PackageVersion Include="Microsoft.Extensions.Configuration.UserSecrets" Version="9.0.8"/>
+        <PackageVersion Include="Microsoft.Extensions.DependencyInjection" Version="9.0.8"/>
+        <PackageVersion Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="9.0.8"/>
+        <PackageVersion Include="Microsoft.Extensions.Http" Version="9.0.8"/>
+        <PackageVersion Include="Microsoft.Extensions.Logging.Abstractions" Version="9.0.8"/>
+        <PackageVersion Include="Microsoft.Extensions.Options.ConfigurationExtensions" Version="9.0.8"/>
+        <PackageVersion Include="Microsoft.NET.Test.Sdk" Version="17.14.1"/>
+        <PackageVersion Include="System.IdentityModel.Tokens.Jwt" Version="8.14.0"/>
+        <PackageVersion Include="Xunit.DependencyInjection" Version="10.6.0"/>
+        <PackageVersion Include="Xunit.DependencyInjection.Logging" Version="10.0.0"/>
+        <PackageVersion Include="xunit.runner.visualstudio" Version="3.1.4"/>
+        <PackageVersion Include="xunit.v3" Version="3.0.1"/>
     </ItemGroup>
 </Project>
