--- a/src/Tests.props
+++ b/src/Tests.props
@@ -9,7 +9,7 @@
         <PackageReference Include="Microsoft.Extensions.DependencyInjection"/>
         <PackageReference Include="Microsoft.Extensions.Logging.Abstractions"/>
         <PackageReference Include="Microsoft.NET.Test.Sdk"/>
-        <PackageReference Include="xunit"/>
+        <PackageReference Include="xunit.v3"/>
         <PackageReference Include="xunit.runner.visualstudio">
             <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
             <PrivateAssets>all</PrivateAssets>
@@ -26,6 +26,5 @@
         <Using Include="FluentAssertions"/>
         <Using Include="Microsoft.Extensions.DependencyInjection"/>
         <Using Include="Xunit"/>
-        <Using Include="Xunit.Abstractions"/>
     </ItemGroup>
 </Project>
