exclude JetBrains.Annotations from runtime

--- a/src/GuessWordClient/GuessWordClient.csproj
+++ b/src/GuessWordClient/GuessWordClient.csproj
@@ -2,7 +2,9 @@
 
     <ItemGroup>
         <PackageReference Include="Flurl"/>
-        <PackageReference Include="JetBrains.Annotations"/>
+        <PackageReference Include="JetBrains.Annotations">
+            <ExcludeAssets>runtime</ExcludeAssets>
+        </PackageReference>
         <PackageReference Include="Macross.Json.Extensions"/>
         <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions"/>
         <PackageReference Include="Microsoft.Extensions.Http"/>
