--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -14,6 +14,11 @@ updates:
     schedule:
       interval: "monthly"
     rebase-strategy: "auto"
+    ignore:
+      - dependency-name: 'Microsoft.*'
+        versions: [ '*' ]
+      - dependency-name: "FluentAssertions"
+        versions: [ '*' ]
     groups:
       All:
         patterns:
