--- a/src/GuessWordClient.Tests/GuessWordClient.Tests.csproj
+++ b/src/GuessWordClient.Tests/GuessWordClient.Tests.csproj
@@ -13,9 +13,7 @@
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
-    <PackageReference Include="Microsoft.Extensions.Configuration.UserSecrets" />
-    <PackageReference Include="Microsoft.Extensions.Http" />
-    <PackageReference Include="Microsoft.Extensions.Options.ConfigurationExtensions" />
+    <PackageReference Include="Shouldly" />
   </ItemGroup>
 
 </Project>
