--- a/src/Directory.Packages.props
+++ b/src/Directory.Packages.props
@@ -8,12 +8,12 @@
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageVersion>
-    <PackageVersion Include="FluentAssertions" Version="7.2.0" />
     <PackageVersion Include="Flurl" Version="4.0.0" />
     <PackageVersion Include="JetBrains.Annotations.Sources" Version="2025.2.2" />
     <PackageVersion Include="Macross.Json.Extensions" Version="3.0.0" />
     <PackageVersion Include="Microsoft.Extensions.Http" Version="9.0.0" />
     <PackageVersion Include="Microsoft.NET.Test.Sdk" Version="17.14.1" />
+    <PackageVersion Include="Shouldly" Version="4.3.0" />
     <PackageVersion Include="Xunit.DependencyInjection" Version="10.7.0" />
     <PackageVersion Include="Xunit.DependencyInjection.Logging" Version="10.0.0" />
     <PackageVersion Include="xunit.runner.visualstudio" Version="3.1.4" />
